force-app/main/default/objects/Commission_Credit__c/Commission_Credit__c.object-meta.xml
<CustomObject>
    <label>iMC Commission Credit</label>
    <nameField>
        <label>iMC Commission Credit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>iMC Commission Credit</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>