force-app/main/default/objects/Commission_Credit__c/fields/Credit_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <inlineHelpText>This is the date the credit record is being Created or issued.  primarily it will be the date the record is created</inlineHelpText>
    <label>Credit Date</label>
    <type>Date</type>
</CustomField>