force-app/main/default/objects/Commission_Credit__c/fields/Credit_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Paid_Date__c</fullName>
    <inlineHelpText>this is the date the credit is taken</inlineHelpText>
    <label>Credit Paid Date</label>
    <type>Date</type>
</CustomField>