force-app/main/default/objects/Commission_Credit__c/fields/Original_Commission__c.field-meta.xml
<CustomField>
    <fullName>Original_Commission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>this is the commission that is being adjusted</inlineHelpText>
    <label>Original Commission</label>
    <referenceTo>Commission__c</referenceTo>
    <relationshipName>Commission_Credit</relationshipName>
    <type>Lookup</type>
</CustomField>