force-app/main/default/objects/Commission_Credit__c/fields/Prorated_Months__c.field-meta.xml
<CustomField>
    <fullName>Prorated_Months__c</fullName>
    <inlineHelpText>number of months credited</inlineHelpText>
    <label>Prorated Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>