force-app/main/default/objects/Commission_Credit__c/fields/Split__c.field-meta.xml
<CustomField>
    <fullName>Split__c</fullName>
    <inlineHelpText>This is the percentage of the original amount that is being returned.</inlineHelpText>
    <label>Split %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>