force-app/main/default/objects/Commission_Credit__c/validationRules/iMC_Credit_must_be_less_than_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>iMC_Credit_must_be_less_than_zero</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.ProfileId &lt;&gt; &quot;00e30000001kms9&quot;,
Credit_Amount__c   &gt;= 0
)</errorConditionFormula>
    <errorMessage>Credit amount must be Negative value</errorMessage>
</ValidationRule>