force-app/main/default/objects/Commission_Credit__c/validationRules/iMC_Credit_Paid_Date_is_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>iMC_Credit_Paid_Date_is_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK( Credit_Paid_Date__c ),
ISPICKVAL( Status__c , &quot;Paid&quot;),
$User.ProfileId &lt;&gt; &quot;00e30000001kms9&quot;
)</errorConditionFormula>
    <errorMessage>Paid Status must have a credit paid date</errorMessage>
</ValidationRule>