force-app/main/default/objects/Commission_Credit__c/validationRules/iMC_Credit_Paid_is_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>iMC_Credit_Paid_is_Approved</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.ProfileId &lt;&gt; &quot;00e30000001kms9&quot;,
NOT(ISBLANK( Commission_Paid_Date__c )),
OR( 
ISPICKVAL( Status__c , &quot;Pending&quot;), 
ISPICKVAL( Status__c , &quot;Approved&quot;) 
))</errorConditionFormula>
    <errorMessage>Status needs to be Approved &amp; Reviewed to be paid</errorMessage>
</ValidationRule>