force-app/main/default/objects/Commission_Credit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Credit_Paid_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Credit_Date__c</columns>
    <columns>Credit_Amount__c</columns>
    <columns>Credit_Notes__c</columns>
    <columns>Credit_Number__c</columns>
    <columns>NAME</columns>
    <columns>Commission_Paid_Date__c</columns>
    <columns>Commission_Payee__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>